--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav .toogle-div {
 
 /* nav media screen  */
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (min-width: 768px) {
   nav .right-nav{
     display: none;
   }
@@ -230,9 +230,8 @@ main
 main #skills {
   color: white;
   width: 70%;
-  margin: 0 auto;
+  margin: 20px auto;
   font-size: x-large;
-  margin-top: 20px;
 }
 main #skills-section h2 {
   color: purple;
@@ -241,11 +240,14 @@ main #skills-section h2 {
   font-size: xx-large;
 }
 
-@media only screen and (max-width: 1280px){
+@media only screen and (min-width: 768px){
   .main-div .right-main-div .resume-div a {
-    width: 23%;
-    padding: 0.6rem;
+    width: 36%;
+    padding: 0.7rem;
   } 
+  main #project-section .projects .project-div .project-vid .link-icons button {
+    width: 10vw;
+  }
 }
 
 
@@ -319,9 +321,15 @@ footer .contact-div h4 {
 
 /* footer  */
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (min-width: 768px) {
   footer .contact-div{
     width: 76%;
+  }
+  footer .contact-div h4 {
+    font-size: x-large;
+  } 
+  footer .contact-div .contact-links {
+    width: 17%;
   }
 }
 
