--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav .toogle-div {
 
 /* nav media screen  */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1280px) {
   nav .right-nav{
     display: none;
   }
@@ -93,6 +93,7 @@ nav .toogle-div {
   margin-bottom: 0;
 }
 .main-div p {
+ 
   color: white;
   font-size: 2vw;
   margin-top: 0;
@@ -240,7 +241,7 @@ main #skills-section h2 {
   font-size: xx-large;
 }
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) and (max-width:1280px){
   .main-div .right-main-div .resume-div a {
     width: 36%;
     padding: 0.7rem;
@@ -321,7 +322,7 @@ footer .contact-div h4 {
 
 /* footer  */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1280px){
   footer .contact-div{
     width: 76%;
   }
