added some css in js

--- a/style.css
+++ b/style.css
@@ -57,6 +57,17 @@ nav .toogle-div {
 @media only screen and (max-width: 650px) {
   nav .right-nav {
     display: none;
+    /* transform: "translateX(0%)"; */
+    /* ease: [0.08, 0.65, 0.53, 0.96];
+    duration: 0.6; */
+  } 
+
+  nav .right-nav a {
+    transform: "scale(1)";
+    opacity: 1;
+    filter: "blur(0px)";
+    /* delay: stagger(0.05); */
+    /* at: "-0.1"; */
   }
 
   nav .toogle-div {
